--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Quote Generator</title>
   </head>
   <body>
-    <div id="root">
-      <h1 className="text-lg text-blue-600">Demo App</h1>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
